# snowflakedb-rs

./: Cargo.toml  LICENSE  README.md
src/: connection.rs  errors.rs  executor.rs  lib.rs  transaction.rs  transaction_test.rs  utils.rs
src/auth/: mod.rs  session.rs
src/auth/strategies/: cert_auth.rs  mod.rs
src/driver/: mod.rs  query.rs
src/driver/base/: bindings.rs  mod.rs  response.rs
src/driver/primitives/: cell.rs  column.rs  mod.rs  row.rs
src/driver/protocols/: arrow.rs  json.rs  mod.rs
src/http/: client.rs  close.rs  login.rs  macros.rs  mod.rs  renew.rs  url.rs
