[package]
name = "snowflakedb-rs"
description = "A lightweight, comprehensive and familiar database driver for the SnowflakeDB written natively in Rust"
version = "1.0.0"
edition = "2024"
license = "BSD-3-Clause"
homepage = "https://github.com/carlvoller/snowflakedb-rs"
repository = "https://github.com/carlvoller/snowflakedb-rs"

[features]
all = ["auth-cert", "arrow", "chrono", "decimal"]
default = []
auth-cert = ["dep:base64", "dep:jsonwebtoken", "dep:rsa", "dep:sha2"]
arrow = ["dep:base64", "dep:arrow-ipc", "dep:arrow-array", "dep:arrow-schema", "dep:arrow-cast", "chrono"]
chrono = ["dep:chrono"]
decimal = ["dep:bigdecimal"]
reqwest = ["dep:reqwest", "dep:bytes"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = { version = "0.22", optional = true }
jsonwebtoken = { version = "10.2", features = ["rust_crypto"], optional = true }
rsa = { version = "0.9", optional = true }
sha2 = { version = "0.10", optional = true }
chrono = { version = "0.4", optional = true }
bigdecimal = { version = "0.4", optional = true }
reqwest = { version = "0.13", features = ["gzip", "json"], optional = true }
bytes = { version = "1", optional = true }
arrow-ipc = { version = "57", optional = true }
arrow-array = { version = "57", optional = true }
arrow-schema = { version = "57", optional = true }
arrow-cast = { version = "57", optional = true }

derive_builder = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
async-stream = "0.3"
hex = "0.4"
futures-util = "0.3"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
reqwest = { version = "0.13", features = ["gzip", "json"] }
